# InterXAi

./: .env  .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
core/: .env  .gitignore  db.sqlite3  manage.py  requirements.txt
core/bot/migrations/: 0001_initial.py
core/core/: settings.py  urls.py
core/interview/: a.html  admin.py  agent.py  github.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/interview/migrations/: 0001_initial.py  0002_customquestion.py  0003_remove_application_attempted_and_more.py  0004_interviewsession_current_question_index.py  0005_remove_application_standardized_resume_and_more.py  0006_alter_application_score_alter_interaction_score.py  0007_interaction_feedback.py  (+23 more)
core/organization/: models.py  serializers.py  urls.py  views.py
core/users/: models.py  serializers.py  urls.py  views.py
core/utils/: BaseAgent.py  Evaluator.py  FinalEvaluator.py  FollowUpdecider.py  ResumeExtractor.py  agent.py  config.py  prompts.py  request_models.py  resumeQuestiongeneratorAgent.py
public/: 1.glb  person.glb
src/: App.jsx
src/components/: header.jsx
src/mocks/: next-image.jsx
src/pages/: About.jsx  Application.jsx  AvatarPlayer.jsx  DasInterViewPlatForm.jsx  Home.jsx  Interview.jsx  InterviewSession.jsx  Leaderboard.jsx  Login.jsx  OrgDashboard.jsx  OrgSignup.jsx  ProfileSetup.jsx  SignUp.jsx  TalkingAvatar.jsx  UserDashboard.jsx
src/routes/: AppRoutes.jsx  ProtectorRouteWrapper.jsx
src/utils/: ImageUploader.jsx  handleToken.js
(+19 files in other folders)
